--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   </head>
 <body>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <p>hola<a href="Capitulos 1-3 Programacion basica/ejercicio1/ejercicio1.html">click</a></p>
 </body>
 </html>
