--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
 <body>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <a href="Capitulos 1-3 Programacion basica/ejercicio1/ejercicio1.html">Ver</a>
+    <a href="Capitulos 1-3 Programacion basica/ejercicio1/">Ver</a>
 </body>
 </html>
