--- a/Capitulos 4/ejercicio9/ejercicio9.html
+++ b/Capitulos 4/ejercicio9/ejercicio9.html
@@ -2,7 +2,9 @@
 <!--
 	@author Javier González Guzmán
 
-	Definir una función que muestre información sobre una cadena de texto que se le pasa como argumento. A partir de la cadena que se le pasa, la función determina si esa cadena está formada sólo por mayúsculas, sólo por minúsculas o por una mezcla de ambas.
+	Definir una función que muestre información sobre una cadena de texto que se le pasa como argumento.
+	A partir de la cadena que se le pasa, la función determina si esa cadena está formada sólo por mayúsculas, 
+	sólo por minúsculas o por una mezcla de ambas.
 
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -14,6 +16,6 @@
 		</script>
 	</head>
 	<body>
-		<p>Un script para ver comprobar si la cadena de caracteres esta en mayuscula, minuscula o mezcla de las dos.</p>
+		<p id="respuesta">Un script para ver comprobar si la cadena de caracteres esta en mayuscula, minuscula o mezcla de las dos.</p>
 	</body>
 </html>
