--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <h2>Tema 4</h2>
     <ul>
         <li><a href="Tema 4/Ajax/Lindo Gatito/introduccion.html">Lindo Gatito</a></li>
+        <li><a href="Tema 4/Ajax/Buscaminas/buscaminas.html">Buscaminas</a></li>
     </ul>
 
 </body>
