--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
     <ul>
         <li><a href="Tema 4/Ajax/Lindo Gatito/introduccion.html">Lindo Gatito</a></li>
         <li><a href="Tema 4/Ajax/Buscaminas/buscaminas.html">Buscaminas</a></li>
+        <li><a href="Tema 4/Ajax/Factura/index.html">Factura Sencilla</a></li>
     </ul>
     <h2>Tema 5</h2>
     <ul>
         <li><a href="Tema 5/eventosRaton/index.html">Eventos de raton</a></li>
-        <li><a href="Tema 5/formulario/index.html">Formulario</a></li>
+        <li><a href="Tema 5/formulario/index.html">Formulario completita</a></li>
     </ul>
 
 </body>
