--- a/index-2.html
+++ b/index-2.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <img src="imagen-fondo.jpg">
-        <h2>DWEC</h2>
+        <h2>DIW</h2>
         <!--<div class="subNombre"><span class="nombre">Javier González Guzmán</span></div>-->
     </div>
     <div class="menu">
@@ -21,5 +21,6 @@
             <li><a href="#">DIW</a></li>
         </ul>
     </div>
+        <p>Practica 10: <a href="DIW/Practica10/index.html">Blog Personal</a></p>
 </body>
 </html>
