--- a/index-2.html
+++ b/index-2.html
@@ -21,6 +21,7 @@
             <li><a href="#">DIW</a></li>
         </ul>
     </div>
-        <p>Practica 10: <a href="DIW/Practica10/index.html">Blog Personal</a></p>
+    <p>Practica 10: <a href="DIW/Practica10/index.html">Blog Personal</a></p>
+    <p>Practica 11: <a href="DIW/Practica11/inicio.html">practica 11</a></p>
 </body>
 </html>
