--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <ul>
         <li><a href="Tema 4/Ajax/Lindo Gatito/introduccion.html">Lindo Gatito</a></li>
         <li><a href="Tema 4/Ajax/Buscaminas/buscaminas.html">Buscaminas</a></li>
+        <li><a href="Tema 4/Ajax/BuscaminasConsola/index.html">Buscaminas en consola</a></li>
         <li><a href="Tema 4/Ajax/Factura/index.html">Factura Sencilla</a></li>
     </ul>
     <h2>Tema 5</h2>
