--- a/index-2.html
+++ b/index-2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DIW</title>
     <link rel="stylesheet" href="estilo_index.css">
 </head>
 <body>
     <div>
         <img src="imagen-fondo.jpg">
         <h2>DIW</h2>
-        <!--<div class="subNombre"><span class="nombre">Javier González Guzmán</span></div>-->
+
     </div>
     <div class="menu">
         <ul id="button">
@@ -23,5 +23,6 @@
     </div>
     <p>Practica 10: <a href="DIW/Practica10/index.html">Blog Personal</a></p>
     <p>Practica 11: <a href="DIW/Practica11/inicio.html">practica 11</a></p>
+    <p>Practica 12: <a href="DIW/Practica12/inicio.html">practica 12</a></p>
 </body>
 </html>
