--- a/index-2.html
+++ b/index-2.html
@@ -23,6 +23,6 @@
     </div>
     <p>Practica 10: <a href="DIW/Practica10/index.html">Blog Personal</a></p>
     <p>Practica 11: <a href="DIW/Practica11/inicio.html">practica 11</a></p>
-    <p>Practica 12: <a href="DIW/Practica12/inicio.html">practica 12</a></p>
+    <p>Practica 12: <a href="DIW/Practica12/index.html">practica 12</a></p>
 </body>
 </html>
