--- a/index.html
+++ b/index.html
@@ -82,7 +82,62 @@
         <li><a href="Tema 5/eventosRaton/index.html">Eventos de raton</a></li>
         <li><a href="Tema 5/formulario/index.html">Formulario completita</a></li>
     </ul>
-
+    <h2>Tema 6 - jQuery</h2>
+    <b>PARTE 1</b>
+    <ul>
+        <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 1/index.html">Ejercicio 1</a></li>
+        <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 2/index.html">Ejercicio 2</a></li>
+        <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 3/index.html">Ejercicio 3</a></li>
+        <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 4/index.html">Ejercicio 4</a></li>
+        <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 5/index.html">Ejercicio 5</a></li>
+        <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 6/index.html">Ejercicio 6</a></li>
+        <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 7/index.html">Ejercicio 7</a></li>
+    </ul>
+    <b>PARTE 2</b>
+    <ul>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 1/index.html">Ejercicio 1</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 2/index.html">Ejercicio 2</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 3/index.html">Ejercicio 3</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 4/index.html">Ejercicio 4</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 5/index.html">Ejercicio 5</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 6/index.html">Ejercicio 6</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 7/index.html">Ejercicio 7</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 8/index.html">Ejercicio 8</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 9/index.html">Ejercicio 9</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 10/index.html">Ejercicio 10</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 11/index.html">Ejercicio 11</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 12/index.html">Ejercicio 12</a></li>
+        <li><a href="Tema 6/Ejercicios parte 2/Ejemplo 13/index.html">Ejercicio 13</a></li>
+    </ul>
+    <b>PARTE 3</b>
+    <ul>
+        <li><a href="Tema 6/Ejercicios parte 3/Ejemplo 1/index.html">Ejercicio 1</a></li>
+        <li><a href="Tema 6/Ejercicios parte 3/Ejemplo 2/index.html">Ejercicio 2</a></li>
+    </ul>
+    <b>PARTE 4</b>
+    <ul>
+        <li><a href="Tema 6/Ejercicios parte 4/Ejemplo 1/index.html">Ejercicio 1</a></li>
+        <li><a href="Tema 6/Ejercicios parte 4/Ejemplo 2/index.html">Ejercicio 2</a></li>
+        <li><a href="Tema 6/Ejercicios parte 4/Ejemplo 3/index.html">Ejercicio 3</a></li>
+        <li><a href="Tema 6/Ejercicios parte 4/Ejemplo 4/index.html">Ejercicio 4</a></li>
+        <li><a href="Tema 6/Ejercicios parte 4/Ejemplo 5/index.html">Ejercicio 5</a></li>
+    </ul>
+    <b>PARTE 5</b>
+    <ul>
+        <li><a href="Tema 6/Ejercicios parte 5/Ejemplo 1/index.html">Ejercicio 1</a></li>
+        <li><a href="Tema 6/Ejercicios parte 5/Ejemplo 2/index.html">Ejercicio 2</a></li>
+   </ul>
+   <b>PARTE 6</b>
+   <ul>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 1/index.html">Ejercicio 1</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 2/index.html">Ejercicio 2</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 3/index.html">Ejercicio 3</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 4/index.html">Ejercicio 4</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 5/index.html">Ejercicio 5</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 6/index.html">Ejercicio 6</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 7/index.html">Ejercicio 7</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 8/index.html">Ejercicio 8</a></li>
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 9/index.html">Ejercicio 9</a></li>    
 </body>
 
 </html>
