--- a/Tema 6/Ejercicios parte 5/Ejemplo 1/index.html
+++ b/Tema 6/Ejercicios parte 5/Ejemplo 1/index.html
@@ -9,11 +9,7 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js"></script>
-    <style>
-     .micapa{
-        color: red;
-     }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <noscript>
