--- a/Tema 6/Ejercicios parte 5/Ejemplo 2/index.html
+++ b/Tema 6/Ejercicios parte 5/Ejemplo 2/index.html
@@ -9,22 +9,7 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js" type="application/x-javascript"></script>
-    <style>
-        #capa1{
-            padding: 24px; 
-            background-color: #ffccdd; 
-            float: left; 
-            border: 2px dotted #666;
-        }
-        #capa2{
-            background-color:#ccc; 
-            border-bottom: 5px solid #999; 
-            margin-left: 10px;
-        }
-        div{
-            margin: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
         <noscript>
