--- a/Tema 6/Ejercicios parte 6/Ejemplo 2/index.html
+++ b/Tema 6/Ejercicios parte 6/Ejemplo 2/index.html
@@ -9,18 +9,7 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js"></script>
-    <style>
-        #micapa{
-            padding: 10px; 
-            background-color: #ffcc99; 
-            width: 150px; 
-            float: left;
-        }
-        #mensaje{
-            padding: 10px; 
-            margin-left: 180px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
         <noscript>
