--- a/Tema 6/Ejercicios parte 6/Ejemplo 6/index.html
+++ b/Tema 6/Ejercicios parte 6/Ejemplo 6/index.html
@@ -9,18 +9,7 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js"></script>
-    <style>
-        #elemento1{
-            background-color: #ccccff; 
-            padding: 5px;
-        }
-        .tip{
-            background-color: #ffcc99;
-            padding: 10px;
-            display: none;
-            position: absolute;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
         <noscript>
