--- a/Tema 6/Ejercicios parte 8/Ejemplo 1/index.html
+++ b/Tema 6/Ejercicios parte 8/Ejemplo 1/index.html
@@ -9,18 +9,24 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js"></script>
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <noscript>
             Mensaje que deberia mostraria si el navegador no es compatible con javascript.
     </noscript>
-    <title>Primer script con jQuery</title>
+    <h1>Primer script con jQuery</h1>
 
-    <h1>Trabajando con el objeto evento</h1>
-    <a class="mienlace" href="http://www.desarrolloweb.com/">Hazme clic, pero no te llevaré a mi href</a>
-	<br>
-	<a class="mienlace" href="http://www.desarrolloweb.com/">Hazme clic, pero no te llevaré tampoco</a>
-    
+    <h2>Animacion jQuery</h2>
+
+        Trabajando con el método animate:
+        <a href="#" id="animar">Animar</a>
+
+        <br>
+        <br>
+
+        Vuelvo a lo que había antes:
+        <a href="#" id="restaurar">Restaurar</a>
+
 </body>
 </html>
