--- a/Tema 6/Ejercicios parte 8/Ejemplo 4/index.html
+++ b/Tema 6/Ejercicios parte 8/Ejemplo 4/index.html
@@ -15,17 +15,8 @@
         <noscript>
                 Mensaje que deberia mostraria si el navegador no es compatible con javascript.
         </noscript>
-    <title>Quinto script con jQuery</title>
- 
-    <h1>Trabajando con eventos en jQuery</h1>
-	
-	<div id="elemento1">Pasa el ratón por encima de este "elemento1".</div>
-	<p>
-		Este texto es para poner <a id="elemento2" href="#">otro elemento con tip</a>.
-	</p>
-	
-	<div class="tip" id="tip1">Esto es para explicar algo sobre el elemento1</div>
-	<div class="tip" id="tip2">Explico mejor este otro elemento con tip!!</div>
-            
+    <h1>Cola de efectos por defecto en jQuery</h1>
+
+    <div id="micapa">Esta capa que se va a animar, en un bucle infinito, por medio de unos efectos que se encolan directamente al llamarlos uno detrás de otro.</div>
 </body>
 </html>
