--- a/Tema 6/Ejercicios parte 7/Ejemplo 3/index.html
+++ b/Tema 6/Ejercicios parte 7/Ejemplo 3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Demo 5</title>
+    <title>Demo 3</title>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
@@ -15,17 +15,14 @@
         <noscript>
                 Mensaje que deberia mostraria si el navegador no es compatible con javascript.
         </noscript>
-    <title>Quinto script con jQuery</title>
+    <h1>Tercero script con jQuery</h1>
+    
+    <h2>Trabajando con plugins en jQuery - tip simple</h2>
+   
+    <div id="elemento1">Pasa el ratón por encima de esta capa...</div>
+    <p>
+       Este texto es para poner <a id="elemento2" href="#">este enlace que también tiene tip</a>.
+    </p>
  
-    <h1>Trabajando con eventos en jQuery</h1>
-	
-	<div id="elemento1">Pasa el ratón por encima de este "elemento1".</div>
-	<p>
-		Este texto es para poner <a id="elemento2" href="#">otro elemento con tip</a>.
-	</p>
-	
-	<div class="tip" id="tip1">Esto es para explicar algo sobre el elemento1</div>
-	<div class="tip" id="tip2">Explico mejor este otro elemento con tip!!</div>
-            
 </body>
 </html>
