--- a/Tema 6/Ejercicios parte 7/Ejemplo 4/index.html
+++ b/Tema 6/Ejercicios parte 7/Ejemplo 4/index.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Demo 1</title>
+    <title>Demo 4</title>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    <noscript>
-            Mensaje que deberia mostraria si el navegador no es compatible con javascript.
-    </noscript>
-    <title>Primer script con jQuery</title>
+        <noscript>
+                Mensaje que deberia mostraria si el navegador no es compatible con javascript.
+        </noscript>
+    <h1>Cuarto script con jQuery</h1>
 
-    <h1>Trabajando con el objeto evento</h1>
-    <a class="mienlace" href="http://www.desarrolloweb.com/">Hazme clic, pero no te llevaré a mi href</a>
+    <h2>Checkbox Personalizado</h2>
+    <span class="ch">Seleccionar</span>
+	<span class="ch">Me interesa</span>
+	<span class="ch">Oooo</span>
 	<br>
-	<a class="mienlace" href="http://www.desarrolloweb.com/">Hazme clic, pero no te llevaré tampoco</a>
-    
+	<br>
+	<span id="otro">otro suelto</span>
+
 </body>
 </html>
