--- a/Tema 6/Ejercicios parte 8/Ejemplo 6/index.html
+++ b/Tema 6/Ejercicios parte 8/Ejemplo 6/index.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Demo 5</title>
+    <title>Demo 6</title>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+
+    <style>
+    body{
+        font-size: 0.75em;
+        font-family: tahoma, verdana, sans-serif;
+    }
+    #micapa{
+        margin-top: 20px;
+        width: 400px;
+        height: 50px;
+        background-color: #f80;
+        padding: 10px;
+    }
+    </style>
 </head>
 <body>
         <noscript>
                 Mensaje que deberia mostraria si el navegador no es compatible con javascript.
         </noscript>
-    <title>Quinto script con jQuery</title>
- 
-    <h1>Trabajando con eventos en jQuery</h1>
-	
-	<div id="elemento1">Pasa el ratón por encima de este "elemento1".</div>
-	<p>
-		Este texto es para poner <a id="elemento2" href="#">otro elemento con tip</a>.
-	</p>
-	
-	<div class="tip" id="tip1">Esto es para explicar algo sobre el elemento1</div>
-	<div class="tip" id="tip2">Explico mejor este otro elemento con tip!!</div>
-            
+    <h1>Cola de funciones que no son efectos</h1>
+
+	<input type="button" id="botoncomenzar" value="Hacer una cola de ejecución con funciones que no son efectos">
+	<div id="micapa"></div>
 </body>
 </html>
