--- a/Tema 6/Ejercicios parte 8/Ejemplo 7/index.html
+++ b/Tema 6/Ejercicios parte 8/Ejemplo 7/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Demo 5</title>
+    <title>Demo 7</title>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="js/archivo.js"></script>
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
         <noscript>
                 Mensaje que deberia mostraria si el navegador no es compatible con javascript.
         </noscript>
-    <title>Quinto script con jQuery</title>
- 
-    <h1>Trabajando con eventos en jQuery</h1>
-	
-	<div id="elemento1">Pasa el ratón por encima de este "elemento1".</div>
-	<p>
-		Este texto es para poner <a id="elemento2" href="#">otro elemento con tip</a>.
-	</p>
-	
-	<div class="tip" id="tip1">Esto es para explicar algo sobre el elemento1</div>
-	<div class="tip" id="tip2">Explico mejor este otro elemento con tip!!</div>
-            
+    <h1>Cola de funciones que no son efectos</h1>
+
+	<input type="button" id="botoncomenzar" value="Comenzar animación">
+	<br>
+	<input type="button" id="botonparar" class="botondetener" value="Pasar a la siguiente etapa de la animación">
+	<br>
+	<input type="button" id="botonpararllegar" class="botondetener" value="Pasar a la siguiente etapa, pero llegar hasta el final de donde se planeaba la animación">
+	<br>
+	<input type="button" id="botonparartodo" class="botondetener" value="Parar todo!">
+    <div id="micapa">Hola a todos!!!</div>
+    
 </body>
 </html>
