--- a/index.html
+++ b/index.html
@@ -137,7 +137,27 @@
        <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 6/index.html">Ejercicio 6</a></li>
        <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 7/index.html">Ejercicio 7</a></li>
        <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 8/index.html">Ejercicio 8</a></li>
-       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 9/index.html">Ejercicio 9</a></li>    
+       <li><a href="Tema 6/Ejercicios parte 6/Ejemplo 9/index.html">Ejercicio 9</a></li>
+    </ul>    
+    <b>PARTE 7</b>
+    <ul>
+        <li><a href="Tema 6/Ejercicios parte 7/Ejemplo 1/index.html">Ejercicio 1</a></li>
+        <li><a href="Tema 6/Ejercicios parte 7/Ejemplo 2/index.html">Ejercicio 2</a></li>
+        <li><a href="Tema 6/Ejercicios parte 7/Ejemplo 3/index.html">Ejercicio 3</a></li>
+        <li><a href="Tema 6/Ejercicios parte 7/Ejemplo 4/index.html">Ejercicio 4</a></li>
+    </ul>    
+     <b>PARTE 8</b>
+     <ul>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 1/index.html">Ejercicio 1</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 2/index.html">Ejercicio 2</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 3/index.html">Ejercicio 3</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 4/index.html">Ejercicio 4</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 5/index.html">Ejercicio 5</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 6/index.html">Ejercicio 6</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 7/index.html">Ejercicio 7</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 8/index.html">Ejercicio 8</a></li>
+         <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 9/index.html">Ejercicio 9</a></li>
+      </ul>    
 </body>
 
 </html>
