--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         <li><a href="Tema 5/Reentregaexamen/index.html">Reentrega de examen</a></li>
     </ul>
     <h2>Tema 6 - jQuery</h2>
+    <b>Buscaminas con jQuery</b>
+    <ul>
+        <li><a href="Tema 6/BuscaminasjQuery/index.html">Buscaminas con jQuery</a></li>
+    </ul>
     <b>PARTE 1</b>
     <ul>
         <li><a href="Tema 6/Ejercicios parte 1/Ejemplo 1/index.html">Ejercicio 1</a></li>
