--- a/Tema 6/BuscaminasjQuery/index.html
+++ b/Tema 6/BuscaminasjQuery/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilos.css" />
     <script src="js/codigo.js" type="text/javascript"></script>
+    <script src="js/comprueba.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 
 </head>
@@ -26,13 +27,13 @@
 
         <h1>BuscaminasJQuery</h1>
 
-        <div id="iconos">
-            <b id="reiniciar" class="fas fa-sync-alt"></b>
-            <b id="banderas" class="fas fa-flag-checkered"></b>&nbsp;
-            <b id="record" class="fas fa-trophy"></b>
+        <div id="marcador">
+            <i id="reiniciar" class="fas fa-sync-alt"></i>
+            <i id="banderas" class="fas fa-flag"></i>
+            <i id="record" class="fas fa-trophy"></i>
         </div>
 
-        <div id="contenedor">
+        <div class="elegir">
             <select id="botonesNivel">
                 <option value="Selecciona">Selecciona un nivel</option>
                 <option id="facil" value="facil">facil</option>
@@ -40,7 +41,7 @@
                 <option id="dificil" value=dificil>dificil</option>
             </select>
 
-            <div id="buscaminasInterfaz">
+            <div id="bInterfaz">
             </div>
         </div>
         <h2></h2>
