--- a/DIW/Portfolio/index.html
+++ b/DIW/Portfolio/index.html
@@ -70,6 +70,7 @@
                         <li><span class="bar javascript"></span><h3>JavaScript 70%</h3></li>
                         <li><span class="bar html-css"></span><h3>Html5/Css3 70%</h3></li>
                         <li><span class="bar jquery"></span><h3>jQuery 50%</h3></li>                    
+                        <li><span class="bar sympony"></span><h3>Symphony 10%</h3></li>                    
                     </ul>
                     <ul id="skill2">
                         <li><span class="bar php"></span><h3>PHP 65%</h3></li>
