subida github portfolio

--- a/index-2.html
+++ b/index-2.html
@@ -24,5 +24,6 @@
     <p>Practica 10: <a href="DIW/Practica10/index.html">Blog Personal</a></p>
     <p>Practica 11: <a href="DIW/Practica11/inicio.html">practica 11</a></p>
     <p>Practica 12: <a href="DIW/Practica12/index.html">practica 12</a></p>
+    <p>Practica 14: <a href="DIW/Portfolio/index.html">Portfolio</a></p>
 </body>
 </html>
