--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
          <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 8/index.html">Ejercicio 8</a></li>
          <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 9/index.html">Ejercicio 9</a></li>
       </ul>    
+      <h2>Tema 7</h2>
+      <b>Buscaminas con jQuery</b>
+      <ul>
+          <li><a href="Tema 7/ClasificacionesJSON(jQuery)/index.html">Archivos con JSON</a></li>
+      </ul>
 </body>
 
 </html>
