--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
       <h2>Tema 7</h2>
       <b>Buscaminas con jQuery</b>
       <ul>
-          <li><a href="Tema 7/ClasificacionesJSON(jQuery)/index.html">Archivos con JSON</a></li>
-      </ul>
+        <li><a href="Tema 7/AJAX con jQuery.Preguntas/index.html">Preguntas jQuery</a></li>
+        <li><a href="Tema 7/ClasificacionesJSON(jQuery)/index.html">Archivos con JSON</a></li>
+    </ul>
 </body>
 
 </html>
