cambios en index

--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
         <li><a href="Tema 5/Reentregaexamen/index.html">Reentrega de examen</a></li>
     </ul>
     <h2>Tema 6 - jQuery</h2>
-    <b>Buscaminas con jQuery</b>
+    <b>Ejercicios extra</b>
     <ul>
         <li><a href="Tema 6/BuscaminasjQuery/index.html">Buscaminas con jQuery</a></li>
+        <li><a href="Tema 6/PluginJQuery/index.html">Plugin de jQuery</a></li>
     </ul>
     <b>PARTE 1</b>
     <ul>
@@ -164,10 +165,10 @@
          <li><a href="Tema 6/Ejercicios parte 8/Ejemplo 9/index.html">Ejercicio 9</a></li>
       </ul>    
       <h2>Tema 7</h2>
-      <b>Buscaminas con jQuery</b>
       <ul>
         <li><a href="Tema 7/AJAX con jQuery.Preguntas/index.html">Preguntas jQuery</a></li>
         <li><a href="Tema 7/ClasificacionesJSON(jQuery)/index.html">Archivos con JSON</a></li>
+        <li><a href="Tema 7/cargaFicheros/index.html">Carga de ficheros</a></li>
     </ul>
 </body>
 
