Subida ejemplos presentacion

--- a/Tema 7/Presentacion/ejemplo4/index.html
+++ b/Tema 7/Presentacion/ejemplo4/index.html
@@ -15,12 +15,8 @@
         Mensaje que deberia mostraria si el navegador no es compatible con javascript.
     </noscript>
     <main>
-        <button id="go1">&raquo; Animate Block1</button>
-        <button id="go2">&raquo; Animate Block2</button>
-        <button id="go3">&raquo; Animate Both</button>
-        <button id="go4">&raquo; Reset</button>
-        <div id="block1">Block1</div>
-        <div id="block2">Block2</div>
+        <div id="prim">Texto de prueba</div>
+        <div id="otro">Texto de prueba</div>
     </main>
 </body>
 </html>
