--- a/Tema 7/Presentacion/Diapositiva3/index.html
+++ b/Tema 7/Presentacion/Diapositiva3/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="js/jquery-3.3.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="js/archiv.js"></script>
-    <style>
-        div{
-            background-color: #000000;
-            color:#fff;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <noscript>
@@ -22,9 +18,8 @@
         <div id="clickme">
             Click here
           </div>
-          <img id="book" src="book.jpg" alt="" width="100" height="123"
+          <img id="book" src="imagend.png" alt="" width="100" height="123"
             style="position: relative; left: 10px;">
-        
     </main>
 </body>
 </html>
