--- a/Tema 7/Presentacion/Diapositiva67/index.html
+++ b/Tema 7/Presentacion/Diapositiva67/index.html
@@ -7,30 +7,16 @@
     <title>Document</title>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/archiv.js"></script>
-    <style>
-    div {
-        position: relative;
-        background-color: #abc;
-        width: 40px;
-        height: 40px;
-        float: left;
-        margin: 5px;
-    }
-  </style>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <noscript>
         Mensaje que deberia mostraria si el navegador no es compatible con javascript.
     </noscript>
     <main>
-        <p><button id="go">Run »</button></p>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-        
+        <input type="button" class="btn" value="Animate">
+        <div class="animate"> specialEasing </div>
     </main>
 </body>
 </html>
