--- a/index3.html
+++ b/index3.html
@@ -13,12 +13,11 @@
             <article>
                 <h1>Ejemplos de control de efectos</h1>
                 <ul>
-                    <li><a href="./Tema 7/Presentacion/ejemplo1/index.html">Ejemplo 1</a></li>
-                    <li><a href="./Tema 7/Presentacion/ejemplo2/index.html">Ejemplo 2</a></li>
-                    <li><a href="./Tema 7/Presentacion/ejemplo3/index.html">Ejemplo 3</a></li>
-                    <li><a href="./Tema 7/Presentacion/ejemplo4/index.html">Ejemplo 4</a></li>
-                    <li><a href="./Tema 7/Presentacion/ejemplo5/index.html">Ejemplo 5</a></li>
-                    <li><a href="./Tema 7/Presentacion/ejemplo6/index.html">Ejemplo 6</a></li>
+                    <li><a href="./Tema 7/Presentacion/Diapositiva3/index.html">Diapositiva 3</a></li>
+                    <li><a href="./Tema 7/Presentacion/Diapositiva4.1/index.html">Diapositiva 4.1</a></li>
+                    <li><a href="./Tema 7/Presentacion/Diapositiva4/index.html">Diapositiva 4</a></li>
+                    <li><a href="./Tema 7/Presentacion/Diapositiva67/index.html">Diapositiva 6-7</a></li>
+                    <li><a href="./Tema 7/Presentacion/Diapositiva7/index.html">Diapositiva 7</a></li>
                 </ul>
             </article>
         </section>
