subida clasificaciones json

--- a/Tema 7/ClasificacionesJSON(jQuery)/index.html
+++ b/Tema 7/ClasificacionesJSON(jQuery)/index.html
@@ -8,7 +8,7 @@
     <title>Indice</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
-    <script src="js/archivo.js" type="text/javascript"></script>
+    <script src="js/nuevo.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -20,6 +20,7 @@
     <input type="button" id="devWeb" value="DevWeb">
     <input type="button" id="habilidadesVida" value="Habilidades Vida">
 
-    <div class="datosJSON"></div>
+    <div id="datosJSON"></div>
+    <div id="resul"></div>
 </body>
 </html>
