Subida busqueda alumnos

--- a/Tema 7/AJAX con jQuery.Preguntas/index.html
+++ b/Tema 7/AJAX con jQuery.Preguntas/index.html
@@ -19,7 +19,7 @@
     <h1>AJAX con jQuery. Preguntas</h1>
     <ul>
         <li><h3>El método ajaxSetup() establece los valores por defecto en las peticiones Ajax. Indica por qué su uso no está recomendado.</h3></li>
-
+        <p>Pueda causar un comportamiento no deseado ya que otras personas que llaman (por ejemplo, plugins) pueden estar esperando la configuración predeterminada normal. Por esa razón recomendamos enfáticamente no usar esta API.</p>
         <li><h3>Indica los 6 manejadores de eventos globales de AJAX.</h3></li>
         <p><b>.ajaxComplete(),</b>Registra un controlador para que se llame cuando se completen las solicitudes de Ajax.</p>
         <p><b>.ajaxError(),</b>Registra un controlador para que se llame cuando Ajax solicite un error. Este es un evento de Ajax.</p>
