--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         <li><a href="Tema 7/AJAX con jQuery.Preguntas/index.html">Preguntas jQuery</a></li>
         <li><a href="Tema 7/ClasificacionesJSON(jQuery)/index.html">Archivos con JSON</a></li>
         <li><a href="Tema 7/cargaFicheros/index.html">Carga de ficheros</a></li>
+        <li><a href="Tema 7/Comunicar BBDD(js_jquery)/index.html">Busqueda alumnos</a></li>
     </ul>
 </body>
 
