subida busqueda alumnos

--- a/Tema 7/Comunicar BBDD(js_jquery)/index.html
+++ b/Tema 7/Comunicar BBDD(js_jquery)/index.html
@@ -14,7 +14,7 @@
     </noscript>
     <h1>Ajax con BBDD y jQuery</h1>
         <p>Comprueba si existe el nombre:</p>
-        <input type="text" name="busqueda" id="busqueda" value="" placeholder="" />
+        <input type="text" name="busqueda" id="busqueda" value="" autocomplete="off" placeholder="" />
     <div id="resultadoBusqueda"></div>
 
     <div class="respuestas">
