cambios y resubida plugin

--- a/Tema 6/PluginJQuery/index.html
+++ b/Tema 6/PluginJQuery/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/jquery.formularioValidar.js"></script>
+    <script src="js/archivo.js"></script>
 </head>
 <body>
     <noscript>
@@ -23,7 +24,7 @@
             <label for="email">Email: </label>
             <input type="text" name="" id="" tipo="email"></br>
             <label for="mensaje">Mensaje: </label></br><br>
-            <textarea name="" id="" cols="30" rows="5" tipo="mensaje"></textarea></br>
+            <textarea name="" id="" cols="30" rows="5" tipo="mensaje" disabled></textarea></br>
             <input type="submit" value="Enviar">
         </form>
     </div>
