cambios en plugin

--- a/Tema 6/PluginJQuery/index.html
+++ b/Tema 6/PluginJQuery/index.html
@@ -17,14 +17,14 @@
     <h1>Formulario con plugin de jQuery</h1>
     <div class="formulario">
         <form action="">
-            <label for="nombre">Nombre: </label> 
-            <input type="text" name="" id="" tipo="nombre"></br>
-            <label for="apellidos">Apellidos: </label>
-            <input type="text" name="" id="" tipo="apellidos"></br>
-            <label for="email">Email: </label>
-            <input type="text" name="" id="" tipo="email"></br>
-            <label for="mensaje">Mensaje: </label></br><br>
-            <textarea name="" id="" cols="30" rows="5" tipo="mensaje" disabled></textarea></br>
+            <p for="nombre">Nombre</p> 
+            <input type="text" name="" id="" tipo="nombre">
+            <p for="apellidos">Apellidos</p>
+            <input type="text" name="" id="" tipo="apellidos">
+            <p for="email">Email</p>
+            <input type="text" name="" id="" tipo="email">
+            <p for="mensaje">Mensaje</p>
+            <textarea name="" id="" cols="20" rows="5" tipo="mensaje" disabled></textarea>
             <input type="submit" value="Enviar">
         </form>
     </div>
